--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "pydantic>=2.11.9",
     "pydantic-settings>=2.10.1",
     "pyyaml>=6.0.2",
+    "rich>=14.1.0",
     "solana>=0.36.6",
     "solders>=0.26.0",
 ]
